trying to get rid of white space

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -169,6 +169,10 @@ header{
 }
 
 /*-----MAIN NAV-----*/
+
+nav{
+    margin-bottom: 0;
+}
 .main-nav{
     font-family: "Amatic SC", cursive;
     position: fixed; 
