lets try this again

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,6 +159,7 @@ h2{
 /*HEADER */
 /* ------------------------------------------*/
 header{
+    margin-top: 0;
     height: 100vh;
     background-image: url(img/header%20background.jpg);
     background-size: cover;
