will this ever work

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -75,14 +75,17 @@
 
     header{
         width: 650px;
+        zoom: 2.5;
     }
     
     section{
         width: 650px;
+        zoom: 2.5;
     }
     
     .main-nav{
         font-size: 80%;
+        margin-bottom: 0;
     }
     
     .about-content-one{
