--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,6 +160,7 @@ h2{
 /* ------------------------------------------*/
 header{
     margin-top: 0;
+??"]
     height: 100vh;
     background-image: url(img/header%20background.jpg);
     background-size: cover;
