--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -100,6 +100,7 @@
         margin-left: 60px;
         width: 400px;
         height: auto;
+        font-size: 100%;
     }
     
     .about-content-three{
