--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -97,6 +97,7 @@
         margin-top: 0px;
         padding-top: 250px;
         padding-bottom: 250px;
+        background: rgba(0, 0, 0, 0);
     }
     
     .about-content-one{
